--- a/RazorPagesMovie/Pages/Index.cshtml
+++ b/RazorPagesMovie/Pages/Index.cshtml
@@ -6,6 +6,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Greetings, my dude.</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <h1 class="display-4">Razor Pages Movie Web App</h1>
+    <p>Created accordingly to the <a href="https://docs.microsoft.com/pl-pl/aspnet/core/tutorials/razor-pages/?view=aspnetcore-2.2">tutorial</a> by <a href="https://github.com/konradchmielewski">Konrad Chmielewski</a>. Click on RpMovie button to start using the app.</p>
